--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,19 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js"
+    "dev": "nodemon  -r dotenv/config --experimental-json-modules server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "razorpay": "^2.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
